Better Camera, new map

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <!-- <script type="text/javascript" src="lib/utils/dat.gui.js"></script> -->
         <!-- <script type="text/javascript" src="lib/utils/three.min.js"></script> -->
         <script type="text/javascript" src="lib/THREE.GamepadControls.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="lib/three/examples/js/controls/PointerLockControls.js"></script>
 
         <script type="text/javascript" src="util_1.js"></script>
         <script type="text/javascript" src="util_2.js"></script>
